kubernetes-adv-deployments/part-11-ingress-aws/v1-my-eks-cluster-ingress/services-my-eks-cluster-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  selector:
    app: app
  ports:
    - name: http
      protocol: TCP
      port: 5000
      targetPort: 5000

---

apiVersion: v1
kind: Service
metadata:
  name: lp
spec:
  selector:
    app: lp
  ports:
    - name: http
      protocol: TCP
      port: 5000
      targetPort: 5000

---

apiVersion: v1
kind: Service
metadata:
  name: play
spec:
  selector:
    app: play
  ports:
    - name: http
      protocol: TCP
      port: 27017
      targetPort: 27017
