kubernetes-adv-deployments/part-11-ingress-aws/v1-my-eks-cluster-ingress/deploy-my-eks-cluster-ingress.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: projectcontour

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: main
spec:
  replicas: 2
  selector:
    matchLabels:
      app: main
  template:
    metadata:
      labels:
        app: main
    spec:
      containers:
      - name: main
        image: dvorkinguy/simple-flask-app:3.1.0

# Define other deployments here

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: web1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web1
  template:
    metadata:
      labels:
        app: web1
    spec:
      containers:
      - name: web1
        image: dvorkinguy/simple-flask-app:3.0.1

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: web2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web2
  template:
    metadata:
      labels:
        app: web2
    spec:
      containers:
      - name: web2
        image: mongo:7.0.0-rc4

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: tomcat
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tomcat
  template:
    metadata:
      labels:
        app: tomcat
    spec:
      containers:
      - name: tomcat
        image: tomcat:8.5.38

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: contour
  namespace: projectcontour
  annotations:
    kubernetes.io/ingress.class: contour
spec:
  rules:
  - host: example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: main
            port:
              name: http
